@@ -1,5 +1,10 @@
 2008-10-13  Jan Urbanski  <jurbanski@flumotion.com>
 
+	* flumotion/common/testsuite.py:
+	Fix the build by supporting Twisted versions < 2.5.0
+
+2008-10-13  Jan Urbanski  <jurbanski@flumotion.com>
+
 	* common/flumotion-trial.in (added):
 	* misc/flumotion-trial.in (deleted):
 	Move flumotion-trial from misc/ to common/ in roder to have it picked
